# SrDesign_PyWave_F2025_S2026

./: .gitignore  README.md  ideas.py  project_metadata.json  pyproject.toml  pytest.ini
API/: apitest.py  example_config.json  initialValues_factory.py  initialValues_strategy.py  json_to_solver.py  metadata_schema.json  metadata_writer.py  simulation_description_schema.json  test_metadata_creation.py
PyQt5-test/input-screen/: example_simulation_config.json  main.py
PyQt5-test/input-screen/gui/: advanced_params_dialog.py  canvas.py  control_panel.py  dialogs.py  main_window.py  measurement_dialog.py  menu_handler.py  progress_bar.py  progress_tags.py  rectangle_dialog.py  ribbon_widget.py  simulation_manager.py  solver_output_dialog.py  solver_worker.py  source_dialog.py  welcome_dialog.py
PyQt5-test/input-screen/utils/: __init__.py  file_handler.py
demos/demo1/: project_metadata.json  simulation_config.json
demos/demo2/: project_metadata.json  simulation_config.json
demos/demo3/: project_metadata.json  simulation_config.json
documentation/: dataflow.drawio  visualizer_class.drawio
solver/: InitialValues.py
solver/FDTD_2D_TE/scattering_loss/: IV_2DTE_scattering.py  analysis_2DTE_scattering.py  api_2DTE_scattering.py  automated_results_collection_2DTE_scattering.py  (+4 more)
test/: README.md  test_analysis.py  test_animation_controller.py  test_heatmap_color_defaults.py  test_heatmap_cpml_overlay.py  test_heatmap_view_persistence.py  test_metadata_creation.py  test_results_archive_loading.py  test_results_widget_multi_chart.py
tests/hello_world/: hello_world.py
(+75 files in other folders)
