[tool.poetry]
name = "srdesign_pywave_f2025_s2026"
version = "0.1.0"
description = "Front end for FTDT"
authors = ["Your Name <you@example.com>"]
license = "GPL-3.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8"
pyqt5 = ">=5.15.9,<6.0.0"
numpy = ">=1.22.0"
psutil = ">=5.8.0"
numba = ">=0.56.0"
pyspeckle = ">=0.3.1"
scipy = ">=1.8.1,<2.0.0"
matplotlib = ">=3.4.2"
pathvalidate = "<=3.2.1"

[tool.poetry.group.dev.dependencies]
pyqt5-tools = "^5.15.9.3.3"
pytest = "8.*"
pylint = "^3.2.0"

[build-system]
requires = ["poetry-core>=1.8.4,<3.0.0"]
build-backend = "poetry.core.masonry.api"
